@@ -13,6 +13,7 @@
     <extension point="xbmc.python.module" library="resources/lib/"/>
     <extension point="xbmc.addon.metadata">
         <news>
+[fix] mktime overflow when loading My Subscriptions
 [fix] encoding issues in search history |contrib: dreznichuk|
         </news>
         <assets>
