@@ -1,4 +1,5 @@
 6.8.11
+[fix] mktime overflow when loading My Subscriptions
 [fix] encoding issues in search history |contrib: dreznichuk|
 
 6.8.10
